# huffman

./: CMakeLists.txt  README.md  data.txt
src/: main.cpp
